# combatlog

./: .dockerignore  .gitignore  Dockerfile.local  README.md  docker-compose.local.yml  docker-compose.yml  parser-gamedata.js  parser-harness.js  parser-warcraft.js  wcl-upload.py  webapp.py
.github/workflows/: app.yml  web.yml
app/scripts/: prepare-sidecar.ps1  prepare-sidecar.sh
app/src/: index.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: .gitkeep
app/src-tauri/src/: main.rs  parser.rs  wcl.rs
web/: Dockerfile  Dockerfile.local  webapp.py
