[package]
name = "combatlog"
version = "0.1.1"
edition = "2021"
description = "combatlog.dev — local WarcraftLogs uploader"
default-run = "combatlog"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "process", "sync", "fs", "time"] }
rquest = { version = "2", features = ["json", "cookies"] }
regex = "1"
anyhow = "1"
rand = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = "thin"
strip = true
